Agent query: Can you verify if the new 'Automation Analysis' section is visible in the interface and shows the automation possibilities when submitting a ticket? Does it display 'Can Automate', 'Steps', 'Success Probability', and 'Required APIs' fields?

--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,24 @@ ENV/
 
 # Logs
 *.log
+
+# Project specific
+generated-icon.png
+uv.lock
+pyproject.toml
+
+# Database
+*.db
+*.sqlite
+*.sqlite3
+
+# Environment
+*.pyc
+.pythonlibs/
+.upm/
+.config/
+
+# Cache
+.ruff_cache/
+.mypy_cache/
+.pytest_cache/
